# iidxOnEar

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
document/: FORMATS.md  KEYSOUND_REPORT.md  STRUCTURE.md
script/: probe_2dx.py  probe_ifs_scan.py  probe_s3p.py
src/: common.rs  jacket.rs  main.rs  music_db.rs  packer.rs  scan.rs  tool.rs  unpack.rs
